# hello_world

./: CMakeLists.txt  main.cpp
sycl/: CMakeLists.txt  main.cpp
